[gd_scene load_steps=2 format=3 uid="uid://cul4hldbid0uy"]

[ext_resource type="Script" path="res://scripts/minigame_gameplay.gd" id="1_y8skl"]

[node name="MinigameGameplay" type="Node2D"]
script = ExtResource("1_y8skl")

[node name="WinButton" type="Button" parent="."]
offset_left = 113.0
offset_top = 74.0
offset_right = 613.0
offset_bottom = 415.0
action_mode = 0
text = "WIN"

[node name="FailButton" type="Button" parent="."]
offset_left = 114.0
offset_top = 648.0
offset_right = 620.0
offset_bottom = 988.0
action_mode = 0
text = "FAIL"

[connection signal="pressed" from="WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="FailButton" to="." method="_on_fail_button_pressed"]
